Made it able to zoom in

--- a/Client Side App/verisons/v2.0/v1.0/css/style.css
+++ b/Client Side App/verisons/v2.0/v1.0/css/style.css
@@ -78,6 +78,9 @@ header:hover{
 	width: 320px;
 	height: 180px;
 	background: #F8F8F8;
+	
+	
+	transition:1s;
 
 	-webkit-box-shadow: 0 0 0 3px rgba(0,0,0,0.05);
 	   -moz-box-shadow: 0 0 0 3px rgba(0,0,0,0.05);
